feat: csrf token added to register form

--- a/src/infrastructures/locales/de/translation.json
+++ b/src/infrastructures/locales/de/translation.json
@@ -1,37 +1,39 @@
 {
-    "home_page_title": "The DE title of the home page",
-    "metadata_title": "The DE metadata title of the page",
-    "metadata_description": "The DE metadata description of the page",
-    "hello": "Hallo",
-    "your-email": "Deine E-Mail",
-    "email-place-holder": "Ihre E-Mail eingeben",
-    "your-password": "Ihr Passwort",
-    "enter-your-password": "Geben Sie Ihr Passwort ein",
-    "repeat-your-password": "Wiederholen Sie Ihr Passwort",
-    "repeat-your-password-placeholder": "Wiederholen Sie Ihr Passwort",
-    "i-agree-with-the": "Ich stimme mit dem",
-    "terms-and-conditions": "Bedingungen und Konditionen",
-    "register-new-user": "Registrieren",
-    "user-has-been-registered-successfully": "Benutzer wurde erfolgreich registriert",
-    "one-or-more-fields-are-invalid": "Eine oder mehrere Dateien sind ungültig",
-    "please-go-to-the-login-page": "Bitte gehen Sie zur Login-Seite",
-    "login": "Anmeldung",
-    "username": "Benutzername",
-    "enter-your-username": "Geben Sie Ihren Benutzernamen ein",
-    "email": "E-Mail",
-    "first-name": "Vorname",
-    "enter-your-first-name": "Geben Sie Ihren Vornamen ein",
-    "last-name": "Nachname",
-    "enter-your-last-name": "Geben Sie Ihren Nachnamen ein",
-    "gender": "Geschlecht",
-    "male": "Männlich",
-    "female": "Weiblich",
-    "date-of-birth": "Geburtsdatum",
-    "phone-number": "Rufnummer",
-    "enter-your-countrys-prefix-number": "Geben Sie die Vorwahlnummer Ihres Landes ein",
-    "enter-your-phone-number": "Geben Sie Ihre Rufnummer ein",
-    "password": "Passwort",
-    "repeat-password": "Passwort wiederholen",
-    "enter-your-password-again": "Geben Sie Ihr Passwort erneut ein",
-    "passwords-do-not-match": "Passwörter stimmen nicht überein"
+  "home_page_title": "The DE title of the home page",
+  "metadata_title": "The DE metadata title of the page",
+  "metadata_description": "The DE metadata description of the page",
+  "hello": "Hallo",
+  "your-email": "Deine E-Mail",
+  "email-place-holder": "Ihre E-Mail eingeben",
+  "your-password": "Ihr Passwort",
+  "enter-your-password": "Geben Sie Ihr Passwort ein",
+  "repeat-your-password": "Wiederholen Sie Ihr Passwort",
+  "repeat-your-password-placeholder": "Wiederholen Sie Ihr Passwort",
+  "i-agree-with-the": "Ich stimme mit dem",
+  "terms-and-conditions": "Bedingungen und Konditionen",
+  "register-new-user": "Registrieren",
+  "user-has-been-registered-successfully": "Benutzer wurde erfolgreich registriert",
+  "one-or-more-fields-are-invalid": "Eine oder mehrere Dateien sind ungültig",
+  "please-go-to-the-login-page": "Bitte gehen Sie zur Login-Seite",
+  "login": "Anmeldung",
+  "username": "Benutzername",
+  "enter-your-username": "Geben Sie Ihren Benutzernamen ein",
+  "email": "E-Mail",
+  "first-name": "Vorname",
+  "enter-your-first-name": "Geben Sie Ihren Vornamen ein",
+  "last-name": "Nachname",
+  "enter-your-last-name": "Geben Sie Ihren Nachnamen ein",
+  "gender": "Geschlecht",
+  "male": "Männlich",
+  "female": "Weiblich",
+  "date-of-birth": "Geburtsdatum",
+  "phone-number": "Rufnummer",
+  "enter-your-countrys-prefix-number": "Geben Sie die Vorwahlnummer Ihres Landes ein",
+  "enter-your-phone-number": "Geben Sie Ihre Rufnummer ein",
+  "password": "Passwort",
+  "repeat-password": "Passwort wiederholen",
+  "enter-your-password-again": "Geben Sie Ihr Passwort erneut ein",
+  "passwords-do-not-match": "Passwörter stimmen nicht überein",
+  "register": "Registrieren",
+  "error-in-fetching-csrf-token": "Fehler beim Abrufen des CSRF-Tokens"
 }
